# flutrace_backend

./: .gitignore  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 01e885c03afe_create_user_table.py  2385a31afd09_add_utc.py  6b23ccda4f81_update_log_table_structure.py  7b56fcf9f9f2_create_logs_table.py  f21d5dfe1d27_add_projects.py
app/: database.py  main.py  models.py  schemas.py
app/auth/: jwt.py
app/routes/: analytics.py  auth.py  logs.py  projects.py  seed.py
app/utils/: sse_manager.py
