[project]
name = "flutrace-backend"
version = "0.1.0"
description = ""
authors = [{name = "Yaroslava Karpenko",email = "yka@empat.tech"}]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.12"
uvicorn = "^0.34.1"
sqlalchemy = "^2.0.40"
asyncpg = "^0.30.0"
alembic = "^1.15.2"
pydantic = "^2.11.3"
python-dotenv = "^1.1.0"
greenlet = "^3.2.0"
psycopg2-binary = "^2.9.10"
python-jose = {extras = ["cryptography"], version = "^3.4.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
